@@ -4,16 +4,18 @@ buildscript {
     repositories {
         mavenLocal()
         jcenter()
+        maven { url "https://dl.bintray.com/stroom/stroom" }
     }
     dependencies {
-        classpath group: 'ca.cutterslade.gradle', name: 'gradle-dependency-analyze', version: '1.2.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        // A fork of https://github.com/wfhartford/gradle-dependency-analyze that works with Java 10
+        classpath 'stroom:gradle-dependency-analyze:v2.2.2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
 plugins {
     //plugin for downloading content from the 'net
-    id "de.undercouch.download" version "3.2.0"
+    id "de.undercouch.download" version "3.4.3"
 
     //plugin for producing a tree of task dependencies, run task 'taskTree'
     id "com.dorongold.task-tree" version "1.3"
@@ -24,7 +26,7 @@ apply plugin: 'ca.cutterslade.analyze'
 
 //if the project has a value for the passed property (i.e from the cmd line via -PpropName=xxx)
 //use that, else use a default value
-ext.getPropertyOrDefault = { propName, defaultValue -> 
+ext.getPropertyOrDefault = { propName, defaultValue ->
     def val;
     if (project.hasProperty(propName) && project.getProperty(propName) != "unspecified" && project.getProperty(propName) != "") {
         val = project.getProperty(propName)
@@ -37,7 +39,7 @@ ext.getPropertyOrDefault = { propName, defaultValue ->
 }
 
 //Extract the major version from a version str
-ext.getMajorVersion = { versionStr  ->
+ext.getMajorVersion = { versionStr ->
     def groups = (versionStr =~ /v([0-9]+)\..*/)
     def majorVer = groups[0][1]
     return majorVer
@@ -49,7 +51,7 @@ def eventLoggingSchemaVer = "v3.2.4"
 //*****************************************************************************
 
 
-def VERSION_PATTERN = /^v[0-9a-zA-Z\.-]+_schema-(v[0-9a-zA-Z\.-]+)$/ 
+def VERSION_PATTERN = /^v[0-9a-zA-Z\.-]+_schema-(v[0-9a-zA-Z\.-]+)$/
 def CHANGE_LOG_FILENAME = "CHANGELOG.md"
 def projectGroup = "event-logging"
 def projectVersion = getPropertyOrDefault('version', "SNAPSHOT_schema-${eventLoggingSchemaVer}")
@@ -60,7 +62,7 @@ if (!(projectVersion =~ /^SNAPSHOT\.*/)) {
     //Ensure the version string looks a bit like v1.2.3_schema-v4.5.6
     if (!(projectVersion =~ VERSION_PATTERN)) {
         throw new GradleException("Version [${projectVersion}] does not match pattern [${VERSION_PATTERN}], e.g. v1.2.3_schema-v4.5.6")
-    } 
+    }
 
     //Ensure the schema part of the combined version string matches eventLoggingSchemaVer
     //This makes sure we don't tag as schema vX when the jar is built with schema vY
@@ -89,21 +91,23 @@ println "Using namespace version: $eventLoggingSchemaMajorVer"
 println "Using schema url:        $eventLoggingSchemaUrl"
 
 ext.versions = [
-    //------event-logging--------------
-    eventLogging: projectVersion,
-    eventLoggingAndSchema: combinedVersion,
+        //------event-logging--------------
+        eventLogging         : projectVersion,
+        eventLoggingAndSchema: combinedVersion,
 
-    //------------3rd-party------------
-    jackson: '2.8.9',
-    junit: '4.12',
-    logback: '1.2.3',
-    saxon: '9.6.0-6',
-    slf4j: '1.7.22',
-    zzDUMMYzz: 'makes sorting easier'
+        //------------3rd-party------------
+        assertj              : '3.10.0',
+        jackson              : '2.9.0',
+        jaxb_api             : '2.3.0',
+        junit                : '5.2.0',
+        logback              : '1.2.3',
+        saxon                : '9.7.0-18',
+        slf4j                : '1.7.25',
+        zzDUMMYzz            : 'makes sorting easier'
 ]
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.2.1'
+    gradleVersion = '4.10'
 }
 
 allprojects {
@@ -119,8 +123,8 @@ subprojects {
     apply plugin: 'idea'
 
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_1_10
+    targetCompatibility = JavaVersion.VERSION_1_10
 
     repositories {
         mavenLocal()
@@ -157,9 +161,62 @@ subprojects {
         }
     }
 
-    clean{
+    clean {
         //clear out the 'out' dirs used by intelliJ
         delete "out"
+    }
+
+    afterEvaluate {
+        repositories {
+            jcenter()
+        }
+
+        compileJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        compileTestJava {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        test {
+            inputs.property("moduleName", moduleName)
+            doFirst {
+                jvmArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        javadoc {
+            options.addStringOption('-module-path', classpath.asPath)
+            options.addStringOption('Xdoclint:all,-missing', '-html5')
+        }
+
+        jar {
+            inputs.property("moduleName", moduleName)
+            manifest {
+                attributes(
+                        "Automatic-Module-Name": moduleName,
+                )
+            }
+        }
     }
 }
 
